--- a/src/app/stacked-bar-graph/stacked-bar-graph.component.html
+++ b/src/app/stacked-bar-graph/stacked-bar-graph.component.html
@@ -1,1 +1,9 @@
-<div id="container"></div>
+<div>
+  <div>
+    <select [(ngModel)]="itemsPerScreen" (ngModelChange)="onChange($event)">
+      <option *ngFor="let option of graphOptions" [ngValue]="option">{{option.value}}</option>
+    </select>
+    {{itemsPerScreen.value}}
+  </div>
+  <div id="container"></div>
+</div>
